--- a/Framework/Framework.vcxproj.filters
+++ b/Framework/Framework.vcxproj.filters
@@ -27,9 +27,8 @@
     <ClCompile Include="Renders\Resources\Texture2D.cpp" />
     <ClCompile Include="Utilities\Animator.cpp" />
     <ClCompile Include="Geometries\AnimationRect.cpp" />
-    <ClCompile Include="Game\Character.cpp" />
-    <ClCompile Include="Game\GameManager.cpp" />
-    <ClCompile Include="Geometries\TextureRectTest.cpp" />
+    <ClCompile Include="Game\GameObject.cpp" />
+    <ClCompile Include="Systems\Camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Systems\Graphics.h" />
@@ -62,8 +61,7 @@
     <ClInclude Include="Renders\Resources\Texture2D.h" />
     <ClInclude Include="Utilities\Animator.h" />
     <ClInclude Include="Geometries\AnimationRect.h" />
-    <ClInclude Include="Game\Character.h" />
-    <ClInclude Include="Game\GameManager.h" />
-    <ClInclude Include="Geometries\TextureRectTest.h" />
+    <ClInclude Include="Game\GameObject.h" />
+    <ClInclude Include="Systems\Camera.h" />
   </ItemGroup>
 </Project>
