이동, 그래픽, 충돌체 컴포넌트 추가 및 분리

--- a/Framework/Framework.vcxproj
+++ b/Framework/Framework.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="Geometries\AnimationRect.cpp" />
     <ClCompile Include="Geometries\Rect.cpp" />
     <ClCompile Include="Geometries\TextureRect.cpp" />
+    <ClCompile Include="Interfaces\IGraphic.cpp" />
     <ClCompile Include="Renders\IA\IndexBuffer.cpp" />
     <ClCompile Include="Renders\IA\InputLayout.cpp" />
     <ClCompile Include="Renders\IA\VertexBuffer.cpp" />
@@ -176,6 +177,7 @@
     <ClCompile Include="Utilities\Animator.cpp" />
     <ClCompile Include="Utilities\BoundingBox.cpp" />
     <ClCompile Include="Systems\Camera.cpp" />
+    <ClCompile Include="Utilities\Collision\Collision.cpp" />
     <ClCompile Include="Utilities\DirectHelper.cpp" />
     <ClCompile Include="Utilities\Gui.cpp" />
     <ClCompile Include="Utilities\Path.cpp" />
@@ -185,11 +187,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework.h" />
-    <ClInclude Include="Game\Decoration.h" />
     <ClInclude Include="Game\GameObject.h" />
     <ClInclude Include="Geometries\AnimationRect.h" />
     <ClInclude Include="Geometries\Rect.h" />
     <ClInclude Include="Geometries\TextureRect.h" />
+    <ClInclude Include="Interfaces\IGraphic.h" />
     <ClInclude Include="Interfaces\IObject.h" />
     <ClInclude Include="Renders\IA\IndexBuffer.h" />
     <ClInclude Include="Renders\IA\InputLayout.h" />
@@ -210,6 +212,7 @@
     <ClInclude Include="Utilities\Animator.h" />
     <ClInclude Include="Utilities\BoundingBox.h" />
     <ClInclude Include="Systems\Camera.h" />
+    <ClInclude Include="Utilities\Collision\Collision.h" />
     <ClInclude Include="Utilities\DirectHelper.h" />
     <ClInclude Include="Utilities\Gui.h" />
     <ClInclude Include="Utilities\Path.h" />
