--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -162,6 +162,7 @@
     <ClInclude Include="Objects\Terrain.h" />
     <ClInclude Include="Program.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="UI\HUD.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Character\Animations.cpp" />
@@ -177,6 +178,7 @@
     <ClCompile Include="Level\SampleLevel\TestLevel.cpp" />
     <ClCompile Include="Objects\Terrain.cpp" />
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="UI\HUD.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Framework.lib" />
