--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -149,12 +149,17 @@
   <ItemGroup>
     <ClInclude Include="Character\Animations.h" />
     <ClInclude Include="Character\Character.h" />
-    <ClInclude Include="Character\PlaybleCharacter.h" />
+    <ClInclude Include="Character\Agent.h" />
+    <ClInclude Include="Component\Collision\Collision.h" />
+    <ClInclude Include="Component\Graphic\AgentGraphic.h" />
+    <ClInclude Include="Component\Graphic\AnimatedGraphic.h" />
+    <ClInclude Include="Component\Graphic\IGraphic.h" />
+    <ClInclude Include="Component\Graphic\TexturedGraphic.h" />
     <ClInclude Include="Game\Decoration.h" />
     <ClInclude Include="Game\Game.h" />
+    <ClInclude Include="Game\GameObject.h" />
     <ClInclude Include="Game\GameWorld.h" />
-    <ClInclude Include="Component\Movement\IMovement.h" />
-    <ClInclude Include="Component\Movement\IPlayerMovement.h" />
+    <ClInclude Include="Component\Input\AgentInput.h" />
     <ClInclude Include="Level\Background.h" />
     <ClInclude Include="Level\Decoration.h" />
     <ClInclude Include="Level\Level.h" />
@@ -167,11 +172,16 @@
   <ItemGroup>
     <ClCompile Include="Character\Animations.cpp" />
     <ClCompile Include="Character\Character.cpp" />
-    <ClCompile Include="Character\PlaybleCharacter.cpp" />
+    <ClCompile Include="Character\Agent.cpp" />
+    <ClCompile Include="Component\Collision\Collision.cpp" />
+    <ClCompile Include="Component\Graphic\AgentGraphic.cpp" />
+    <ClCompile Include="Component\Graphic\AnimatedGraphic.cpp" />
+    <ClCompile Include="Component\Graphic\IGraphic.cpp" />
+    <ClCompile Include="Component\Graphic\TexturedGraphic.cpp" />
     <ClCompile Include="Game\Game.cpp" />
+    <ClCompile Include="Game\GameObject.cpp" />
     <ClCompile Include="Game\GameWorld.cpp" />
-    <ClCompile Include="Component\Movement\IMovement.cpp" />
-    <ClCompile Include="Component\Movement\IPlayerMovement.cpp" />
+    <ClCompile Include="Component\Input\AgentInput.cpp" />
     <ClCompile Include="Level\Background.cpp" />
     <ClCompile Include="Level\Decoration.cpp" />
     <ClCompile Include="Level\Level.cpp" />
