--- a/UnitTest/UnitTest.vcxproj.filters
+++ b/UnitTest/UnitTest.vcxproj.filters
@@ -5,34 +5,44 @@
     <ClInclude Include="Program.h" />
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Character\Character.h" />
-    <ClInclude Include="Component\Movement\IMovement.h" />
+    <ClInclude Include="Component\Input\AgentInput.h" />
     <ClInclude Include="Game\GameWorld.h" />
     <ClInclude Include="Level\Level.h" />
     <ClInclude Include="Level\Decoration.h" />
     <ClInclude Include="Objects\Terrain.h" />
     <ClInclude Include="Level\SampleLevel\TestLevel.h" />
     <ClInclude Include="Level\Background.h" />
-    <ClInclude Include="Component\Movement\IPlayerMovement.h" />
-    <ClInclude Include="Character\PlaybleCharacter.h" />
+    <ClInclude Include="Character\Agent.h" />
     <ClInclude Include="Game\Decoration.h" />
     <ClInclude Include="Character\Animations.h" />
     <ClInclude Include="UI\HUD.h" />
+    <ClInclude Include="Component\Graphic\AnimatedGraphic.h" />
+    <ClInclude Include="Component\Graphic\TexturedGraphic.h" />
+    <ClInclude Include="Component\Graphic\AgentGraphic.h" />
+    <ClInclude Include="Component\Graphic\IGraphic.h" />
+    <ClInclude Include="Game\GameObject.h" />
+    <ClInclude Include="Component\Collision\Collision.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Program.cpp" />
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Character\Character.cpp" />
-    <ClCompile Include="Component\Movement\IMovement.cpp" />
+    <ClCompile Include="Component\Input\AgentInput.cpp" />
     <ClCompile Include="Game\GameWorld.cpp" />
     <ClCompile Include="Level\Level.cpp" />
     <ClCompile Include="Level\Decoration.cpp" />
     <ClCompile Include="Objects\Terrain.cpp" />
     <ClCompile Include="Level\SampleLevel\TestLevel.cpp" />
     <ClCompile Include="Level\Background.cpp" />
-    <ClCompile Include="Component\Movement\IPlayerMovement.cpp" />
-    <ClCompile Include="Character\PlaybleCharacter.cpp" />
+    <ClCompile Include="Character\Agent.cpp" />
     <ClCompile Include="Character\Animations.cpp" />
     <ClCompile Include="UI\HUD.cpp" />
+    <ClCompile Include="Component\Graphic\AgentGraphic.cpp" />
+    <ClCompile Include="Component\Graphic\AnimatedGraphic.cpp" />
+    <ClCompile Include="Component\Graphic\TexturedGraphic.cpp" />
+    <ClCompile Include="Component\Graphic\IGraphic.cpp" />
+    <ClCompile Include="Game\GameObject.cpp" />
+    <ClCompile Include="Component\Collision\Collision.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Framework.lib" />
