--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Component\Gun\Bullet\Bullet.h" />
     <ClInclude Include="Character\Animations.h" />
     <ClInclude Include="Character\Character.h" />
     <ClInclude Include="Character\Agent.h" />
@@ -155,6 +156,7 @@
     <ClInclude Include="Component\Graphic\AnimatedGraphic.h" />
     <ClInclude Include="Component\Graphic\IGraphic.h" />
     <ClInclude Include="Component\Graphic\TexturedGraphic.h" />
+    <ClInclude Include="Component\Gun\Gun.h" />
     <ClInclude Include="Game\Decoration.h" />
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Game\GameObject.h" />
@@ -170,6 +172,7 @@
     <ClInclude Include="UI\HUD.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Component\Gun\Bullet\Bullet.cpp" />
     <ClCompile Include="Character\Animations.cpp" />
     <ClCompile Include="Character\Character.cpp" />
     <ClCompile Include="Character\Agent.cpp" />
@@ -178,6 +181,7 @@
     <ClCompile Include="Component\Graphic\AnimatedGraphic.cpp" />
     <ClCompile Include="Component\Graphic\IGraphic.cpp" />
     <ClCompile Include="Component\Graphic\TexturedGraphic.cpp" />
+    <ClCompile Include="Component\Gun\Gun.cpp" />
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Game\GameObject.cpp" />
     <ClCompile Include="Game\GameWorld.cpp" />
