--- a/UnitTest/imgui.ini
+++ b/UnitTest/imgui.ini
@@ -48,5 +48,15 @@ Pos=60,60
 Size=102,62
 Collapsed=0
 
+[Window][Game]
+Pos=1137,7
+Size=142,75
+Collapsed=0
+
+[Window][gun]
+Pos=251,278
+Size=176,110
+Collapsed=0
+
 [Docking][Data]
 
