--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Component\AgentState.h" />
+    <ClInclude Include="Component\Combat.h" />
     <ClInclude Include="Component\Gun\Bullet\Bullet.h" />
     <ClInclude Include="Character\Animations.h" />
     <ClInclude Include="Character\Character.h" />
@@ -157,6 +159,9 @@
     <ClInclude Include="Component\Graphic\IGraphic.h" />
     <ClInclude Include="Component\Graphic\TexturedGraphic.h" />
     <ClInclude Include="Component\Gun\Gun.h" />
+    <ClInclude Include="Component\Input\Input.h" />
+    <ClInclude Include="Component\Movement\PlayerMovement.h" />
+    <ClInclude Include="Component\Movement\Movement.h" />
     <ClInclude Include="Game\Decoration.h" />
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Game\GameManager.h" />
@@ -173,6 +178,8 @@
     <ClInclude Include="UI\HUD.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Component\AgentState.cpp" />
+    <ClCompile Include="Component\Combat.cpp" />
     <ClCompile Include="Component\Gun\Bullet\Bullet.cpp" />
     <ClCompile Include="Character\Animations.cpp" />
     <ClCompile Include="Character\Character.cpp" />
@@ -183,6 +190,9 @@
     <ClCompile Include="Component\Graphic\IGraphic.cpp" />
     <ClCompile Include="Component\Graphic\TexturedGraphic.cpp" />
     <ClCompile Include="Component\Gun\Gun.cpp" />
+    <ClCompile Include="Component\Input\Input.cpp" />
+    <ClCompile Include="Component\Movement\PlayerMovement.cpp" />
+    <ClCompile Include="Component\Movement\Movement.cpp" />
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Game\GameManager.cpp" />
     <ClCompile Include="Game\GameObject.cpp" />
