--- a/UnitTest/UnitTest.vcxproj.filters
+++ b/UnitTest/UnitTest.vcxproj.filters
@@ -25,6 +25,11 @@
     <ClInclude Include="Component\Gun\Bullet\Bullet.h" />
     <ClInclude Include="Component\Gun\Gun.h" />
     <ClInclude Include="Game\GameManager.h" />
+    <ClInclude Include="Component\AgentState.h" />
+    <ClInclude Include="Component\Movement\Movement.h" />
+    <ClInclude Include="Component\Movement\PlayerMovement.h" />
+    <ClInclude Include="Component\Input\Input.h" />
+    <ClInclude Include="Component\Combat.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Program.cpp" />
@@ -49,6 +54,11 @@
     <ClCompile Include="Component\Gun\Bullet\Bullet.cpp" />
     <ClCompile Include="Component\Gun\Gun.cpp" />
     <ClCompile Include="Game\GameManager.cpp" />
+    <ClCompile Include="Component\AgentState.cpp" />
+    <ClCompile Include="Component\Movement\Movement.cpp" />
+    <ClCompile Include="Component\Movement\PlayerMovement.cpp" />
+    <ClCompile Include="Component\Input\Input.cpp" />
+    <ClCompile Include="Component\Combat.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Framework.lib" />
