--- a/Framework/Framework.vcxproj.filters
+++ b/Framework/Framework.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Systems\Camera.cpp" />
     <ClCompile Include="Utilities\UI.cpp" />
     <ClCompile Include="Game\UI\ProgressBar.cpp" />
+    <ClCompile Include="Geometries\Tile\Tile.cpp" />
+    <ClCompile Include="Geometries\Tile\TileSet.cpp" />
+    <ClCompile Include="Geometries\Tile\TileMap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Systems\Graphics.h" />
@@ -65,5 +68,8 @@
     <ClInclude Include="Systems\Camera.h" />
     <ClInclude Include="Utilities\UI.h" />
     <ClInclude Include="Game\UI\ProgressBar.h" />
+    <ClInclude Include="Geometries\Tile\Tile.h" />
+    <ClInclude Include="Geometries\Tile\TileSet.h" />
+    <ClInclude Include="Geometries\Tile\TileMap.h" />
   </ItemGroup>
 </Project>
