--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -147,8 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Component\AgentState.h" />
-    <ClInclude Include="Component\Combat.h" />
+    <ClInclude Include="Component\Combat\Combat.h" />
+    <ClInclude Include="Component\Combat\Trowable\Throwable.h" />
     <ClInclude Include="Component\Gun\Bullet\Bullet.h" />
     <ClInclude Include="Character\Animations.h" />
     <ClInclude Include="Character\Character.h" />
@@ -159,12 +159,12 @@
     <ClInclude Include="Component\Input\Input.h" />
     <ClInclude Include="Component\Movement\PlayerMovement.h" />
     <ClInclude Include="Component\Movement\Movement.h" />
+    <ClInclude Include="Component\Combat\PlayerCombat.h" />
     <ClInclude Include="Game\Decoration.h" />
     <ClInclude Include="Game\Game.h" />
     <ClInclude Include="Game\GameManager.h" />
     <ClInclude Include="Game\GameObject.h" />
     <ClInclude Include="Game\GameWorld.h" />
-    <ClInclude Include="Component\Input\AgentInput.h" />
     <ClInclude Include="Level\Background.h" />
     <ClInclude Include="Level\Decoration.h" />
     <ClInclude Include="Level\Level.h" />
@@ -175,8 +175,8 @@
     <ClInclude Include="UI\HUD.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Component\AgentState.cpp" />
-    <ClCompile Include="Component\Combat.cpp" />
+    <ClCompile Include="Component\Combat\Combat.cpp" />
+    <ClCompile Include="Component\Combat\Trowable\Throwable.cpp" />
     <ClCompile Include="Component\Gun\Bullet\Bullet.cpp" />
     <ClCompile Include="Character\Animations.cpp" />
     <ClCompile Include="Character\Character.cpp" />
@@ -187,11 +187,11 @@
     <ClCompile Include="Component\Input\Input.cpp" />
     <ClCompile Include="Component\Movement\PlayerMovement.cpp" />
     <ClCompile Include="Component\Movement\Movement.cpp" />
+    <ClCompile Include="Component\Combat\PlayerCombat.cpp" />
     <ClCompile Include="Game\Game.cpp" />
     <ClCompile Include="Game\GameManager.cpp" />
     <ClCompile Include="Game\GameObject.cpp" />
     <ClCompile Include="Game\GameWorld.cpp" />
-    <ClCompile Include="Component\Input\AgentInput.cpp" />
     <ClCompile Include="Level\Background.cpp" />
     <ClCompile Include="Level\Decoration.cpp" />
     <ClCompile Include="Level\Level.cpp" />
