--- a/UnitTest/imgui.ini
+++ b/UnitTest/imgui.ini
@@ -49,14 +49,57 @@ Size=102,62
 Collapsed=0
 
 [Window][Game]
-Pos=1137,7
-Size=142,75
+Pos=924,601
+Size=347,109
 Collapsed=0
 
 [Window][gun]
-Pos=251,278
-Size=176,110
+Pos=128,171
+Size=230,129
 Collapsed=0
 
+[Window][TileSet]
+Pos=60,60
+Size=254,714
+Collapsed=0
+
+[Window][TileMap]
+Pos=60,60
+Size=83,61
+Collapsed=0
+
+[Window][Color Choice]
+Pos=60,60
+Size=90,61
+Collapsed=0
+
+[Window][Àâ¾Ò´Ù¿ä³ð]
+Pos=60,60
+Size=85,52
+Collapsed=0
+
+[Window][State]
+Pos=1021,164
+Size=252,80
+Collapsed=0
+DockId=0x00000003,0
+
+[Window][Combat]
+Pos=1021,11
+Size=252,151
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Movement]
+Pos=1021,246
+Size=252,75
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
+DockNode      ID=0x00000001 Pos=1021,11 Size=252,310 Split=Y
+  DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=252,233 Split=Y
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=252,151 SelectedTab=0x8AFDE6AE
+    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=252,80 SelectedTab=0x6252FDFF
+  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=252,75 SelectedTab=0x0DABF7A1
 
