--- a/UnitTest/UnitTest.vcxproj.filters
+++ b/UnitTest/UnitTest.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClInclude Include="Component\Input\Input.h" />
     <ClInclude Include="Component\Combat\Combat.h" />
     <ClInclude Include="Component\Combat\PlayerCombat.h" />
-    <ClInclude Include="Component\Combat\Trowable\Throwable.h" />
+    <ClInclude Include="Component\Combat\Throwable\Throwable.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Program.cpp" />
@@ -52,7 +52,7 @@
     <ClCompile Include="Component\Input\Input.cpp" />
     <ClCompile Include="Component\Combat\Combat.cpp" />
     <ClCompile Include="Component\Combat\PlayerCombat.cpp" />
-    <ClCompile Include="Component\Combat\Trowable\Throwable.cpp" />
+    <ClCompile Include="Component\Combat\Throwable\Throwable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Framework.lib" />
