--- a/UnitTest/imgui.ini
+++ b/UnitTest/imgui.ini
@@ -79,25 +79,30 @@ Size=85,52
 Collapsed=0
 
 [Window][State]
-Pos=1027,166
+Pos=1027,167
 Size=252,80
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Combat]
 Pos=1027,13
-Size=252,151
+Size=252,152
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Movement]
-Pos=1027,248
+Pos=1027,249
 Size=252,75
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Index]
+Pos=60,60
+Size=32,52
+Collapsed=0
+
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=1027,13 Size=252,310 Split=Y
+DockNode      ID=0x00000001 Pos=1027,13 Size=252,311 Split=Y
   DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=252,233 Split=Y
     DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=252,151 SelectedTab=0x8AFDE6AE
     DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=252,80 SelectedTab=0x6252FDFF
