주석 추가 / 마우스 위치에 따른 카메라 움직임

--- a/UnitTest/imgui.ini
+++ b/UnitTest/imgui.ini
@@ -49,7 +49,7 @@ Size=102,62
 Collapsed=0
 
 [Window][Game]
-Pos=924,601
+Pos=926,10
 Size=347,109
 Collapsed=0
 
@@ -79,19 +79,19 @@ Size=85,52
 Collapsed=0
 
 [Window][State]
-Pos=1037,175
+Pos=445,515
 Size=252,80
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Combat]
-Pos=1037,21
+Pos=445,361
 Size=252,152
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Movement]
-Pos=1037,257
+Pos=445,597
 Size=252,75
 Collapsed=0
 DockId=0x00000005,0
@@ -102,9 +102,9 @@ Size=32,52
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=1037,21 Size=252,311 Split=Y
+DockNode      ID=0x00000001 Pos=445,361 Size=252,311 Split=Y
   DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=252,233 Split=Y
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=252,151 SelectedTab=0x8AFDE6AE
-    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=252,80 SelectedTab=0x6252FDFF
-  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=252,75 SelectedTab=0x0DABF7A1
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=252,151 HiddenTabBar=1 SelectedTab=0x8AFDE6AE
+    DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=252,80 HiddenTabBar=1 SelectedTab=0x6252FDFF
+  DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=252,75 HiddenTabBar=1 SelectedTab=0x0DABF7A1
 
