게임오브젝트 중심점 변경 작업 진행중

--- a/Framework/PropertySheet.props
+++ b/Framework/PropertySheet.props
@@ -2,10 +2,10 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <DH>D:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include</DH>
-    <DL64>D:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64</DL64>
-    <DL>D:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86</DL>
-    <DL32>D:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86</DL32>
+    <DH>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include</DH>
+    <DL64>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64</DL64>
+    <DL>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86</DL>
+    <DL32>C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86</DL32>
   </PropertyGroup>
   <PropertyGroup />
   <ItemDefinitionGroup />
