파일트리 정리 및 게임오브젝트 및 여러 컴포넌트 프레임워크에 포함

--- a/Framework/Framework.vcxproj
+++ b/Framework/Framework.vcxproj
@@ -155,7 +155,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Framework.cpp" />
+    <ClCompile Include="Game\GameManager.cpp" />
+    <ClCompile Include="Game\Level\Level.cpp" />
     <ClCompile Include="Game\UI\ProgressBar.cpp" />
+    <ClCompile Include="Objects\GameObject.cpp" />
+    <ClCompile Include="Objects\Terrain.cpp" />
+    <ClCompile Include="Utilities\Collision\Collision.cpp" />
+    <ClCompile Include="Utilities\ObjectGraphic\ObjectGraphic.cpp" />
     <ClCompile Include="Utilities\UI.cpp" />
     <ClCompile Include="Geometries\AnimationRect.cpp" />
     <ClCompile Include="Geometries\Rect.cpp" />
@@ -186,7 +192,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework.h" />
+    <ClInclude Include="Game\GameManager.h" />
+    <ClInclude Include="Game\Gun\Gun.h" />
+    <ClInclude Include="Game\Level\Level.h" />
     <ClInclude Include="Game\UI\ProgressBar.h" />
+    <ClInclude Include="Objects\GameObject.h" />
+    <ClInclude Include="Objects\Terrain.h" />
+    <ClInclude Include="Utilities\Collision\Collision.h" />
+    <ClInclude Include="Utilities\ObjectGraphic\ObjectGraphic.h" />
     <ClInclude Include="Utilities\UI.h" />
     <ClInclude Include="Geometries\AnimationRect.h" />
     <ClInclude Include="Geometries\Rect.h" />
