--- a/UnitTest/UnitTest.vcxproj.filters
+++ b/UnitTest/UnitTest.vcxproj.filters
@@ -3,62 +3,48 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Program.h" />
-    <ClInclude Include="Game\Game.h" />
+    <ClInclude Include="Utilities\Game.h" />
     <ClInclude Include="Character\Character.h" />
-    <ClInclude Include="Game\GameWorld.h" />
-    <ClInclude Include="Level\Level.h" />
+    <ClInclude Include="Utilities\GameWorld.h" />
     <ClInclude Include="Level\Decoration.h" />
-    <ClInclude Include="Objects\Terrain.h" />
     <ClInclude Include="Level\SampleLevel\TestLevel.h" />
     <ClInclude Include="Level\Background.h" />
     <ClInclude Include="Character\Agent.h" />
-    <ClInclude Include="Game\Decoration.h" />
+    <ClInclude Include="Utilities\Decoration.h" />
     <ClInclude Include="Character\Animations.h" />
     <ClInclude Include="UI\HUD.h" />
-    <ClInclude Include="Component\Graphic\ObjectGraphic.h" />
-    <ClInclude Include="Game\GameObject.h" />
-    <ClInclude Include="Component\Collision\Collision.h" />
-    <ClInclude Include="Component\Gun\Bullet\Bullet.h" />
-    <ClInclude Include="Component\Gun\Gun.h" />
-    <ClInclude Include="Game\GameManager.h" />
-    <ClInclude Include="Component\Movement\Movement.h" />
-    <ClInclude Include="Component\Movement\PlayerMovement.h" />
-    <ClInclude Include="Component\Input\Input.h" />
-    <ClInclude Include="Component\Combat\Combat.h" />
-    <ClInclude Include="Component\Combat\PlayerCombat.h" />
-    <ClInclude Include="Component\Combat\Throwable\Throwable.h" />
+    <ClInclude Include="GameObjects\Bullet\Bullet.h" />
+    <ClInclude Include="Utilities\Input\Input.h" />
+    <ClInclude Include="Utilities\Combat\PlayerCombat.h" />
+    <ClInclude Include="GameObjects\Throwable\Throwable.h" />
     <ClInclude Include="Character\Enemy.h" />
     <ClInclude Include="Character\SoldierSample.h" />
-    <ClInclude Include="Component\Movement\ThrowableMovement.h" />
+    <ClInclude Include="Utilities\Movements\PlayerMovement.h" />
+    <ClInclude Include="Utilities\Movements\ThrowableMovement.h" />
+    <ClInclude Include="Utilities\Gun\Gun.h" />
+    <ClInclude Include="Utilities\Movements\Movement.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Program.cpp" />
-    <ClCompile Include="Game\Game.cpp" />
+    <ClCompile Include="Utilities\Game.cpp" />
     <ClCompile Include="Character\Character.cpp" />
-    <ClCompile Include="Game\GameWorld.cpp" />
-    <ClCompile Include="Level\Level.cpp" />
+    <ClCompile Include="Utilities\GameWorld.cpp" />
     <ClCompile Include="Level\Decoration.cpp" />
-    <ClCompile Include="Objects\Terrain.cpp" />
     <ClCompile Include="Level\SampleLevel\TestLevel.cpp" />
     <ClCompile Include="Level\Background.cpp" />
     <ClCompile Include="Character\Agent.cpp" />
     <ClCompile Include="Character\Animations.cpp" />
     <ClCompile Include="UI\HUD.cpp" />
-    <ClCompile Include="Game\GameObject.cpp" />
-    <ClCompile Include="Component\Collision\Collision.cpp" />
-    <ClCompile Include="Component\Graphic\ObjectGraphic.cpp" />
-    <ClCompile Include="Component\Gun\Bullet\Bullet.cpp" />
-    <ClCompile Include="Component\Gun\Gun.cpp" />
-    <ClCompile Include="Game\GameManager.cpp" />
-    <ClCompile Include="Component\Movement\Movement.cpp" />
-    <ClCompile Include="Component\Movement\PlayerMovement.cpp" />
-    <ClCompile Include="Component\Input\Input.cpp" />
-    <ClCompile Include="Component\Combat\Combat.cpp" />
-    <ClCompile Include="Component\Combat\PlayerCombat.cpp" />
-    <ClCompile Include="Component\Combat\Throwable\Throwable.cpp" />
+    <ClCompile Include="GameObjects\Bullet\Bullet.cpp" />
+    <ClCompile Include="Utilities\Input\Input.cpp" />
+    <ClCompile Include="Utilities\Combat\PlayerCombat.cpp" />
+    <ClCompile Include="GameObjects\Throwable\Throwable.cpp" />
     <ClCompile Include="Character\Enemy.cpp" />
     <ClCompile Include="Character\SoldierSample.cpp" />
-    <ClCompile Include="Component\Movement\ThrowableMovement.cpp" />
+    <ClCompile Include="Utilities\Movements\PlayerMovement.cpp" />
+    <ClCompile Include="Utilities\Movements\ThrowableMovement.cpp" />
+    <ClCompile Include="Utilities\Gun\Gun.cpp" />
+    <ClCompile Include="Utilities\Movements\Movement.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Framework.lib" />
