--- a/Framework/Framework.vcxproj.filters
+++ b/Framework/Framework.vcxproj.filters
@@ -36,6 +36,10 @@
     <ClCompile Include="Game\GameManager.cpp" />
     <ClCompile Include="Utilities\ObjectGraphic\ObjectGraphic.cpp" />
     <ClCompile Include="Objects\Terrain.cpp" />
+    <ClCompile Include="Game\Level\Room\Room.cpp" />
+    <ClCompile Include="Geometries\Tile\Tile.cpp" />
+    <ClCompile Include="Geometries\Tile\TileMap.cpp" />
+    <ClCompile Include="Geometries\Tile\TileSet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Systems\Graphics.h" />
@@ -78,5 +82,9 @@
     <ClInclude Include="Utilities\ObjectGraphic\ObjectGraphic.h" />
     <ClInclude Include="Game\Gun\Gun.h" />
     <ClInclude Include="Objects\Terrain.h" />
+    <ClInclude Include="Game\Level\Room\Room.h" />
+    <ClInclude Include="Geometries\Tile\Tile.h" />
+    <ClInclude Include="Geometries\Tile\TileMap.h" />
+    <ClInclude Include="Geometries\Tile\TileSet.h" />
   </ItemGroup>
 </Project>
