--- a/UnitTest/imgui.ini
+++ b/UnitTest/imgui.ini
@@ -59,18 +59,19 @@ Size=230,129
 Collapsed=0
 
 [Window][TileSet]
-Pos=60,60
-Size=254,714
+Pos=655,75
+Size=194,295
 Collapsed=0
+DockId=0x00000008,0
 
 [Window][TileMap]
-Pos=60,60
-Size=83,61
+Pos=252,272
+Size=265,407
 Collapsed=0
 
 [Window][Color Choice]
-Pos=60,60
-Size=90,61
+Pos=778,499
+Size=126,84
 Collapsed=0
 
 [Window][Àâ¾Ò´Ù¿ä³ð]
@@ -79,32 +80,59 @@ Size=85,52
 Collapsed=0
 
 [Window][State]
-Pos=8,159
+Pos=1011,515
 Size=252,80
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Combat]
-Pos=8,5
+Pos=1011,361
 Size=252,152
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Movement]
-Pos=8,241
+Pos=1011,597
 Size=252,75
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Index]
 Pos=60,60
-Size=32,52
+Size=78,67
+Collapsed=0
+
+[Window][TilePosition]
+Pos=725,12
+Size=124,61
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][Drawing tile]
+Pos=60,60
+Size=50,65
+Collapsed=0
+
+[Window][Draw]
+Pos=655,12
+Size=68,61
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Enter project name]
+Pos=60,60
+Size=32,33
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=8,5 Size=252,311 Split=Y
+DockNode      ID=0x00000001 Pos=1011,361 Size=252,311 Split=Y
   DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=252,233 Split=Y
     DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=252,151 HiddenTabBar=1 SelectedTab=0x8AFDE6AE
     DockNode  ID=0x00000003 Parent=0x00000004 SizeRef=252,80 HiddenTabBar=1 SelectedTab=0x6252FDFF
   DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=252,75 HiddenTabBar=1 SelectedTab=0x0DABF7A1
+DockNode      ID=0x00000006 Pos=655,12 Size=194,358 Split=Y SelectedTab=0x6866767E
+  DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=194,61 Split=X SelectedTab=0xD0C01231
+    DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=68,67 HiddenTabBar=1 SelectedTab=0xD0C01231
+    DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=124,67 HiddenTabBar=1 SelectedTab=0x6866767E
+  DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=194,295 SelectedTab=0x142F6B1B
 
