--- a/UnitTest/UnitTest.vcxproj.filters
+++ b/UnitTest/UnitTest.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClInclude Include="Utilities\Movements\ThrowableMovement.h" />
     <ClInclude Include="Utilities\Gun\Gun.h" />
     <ClInclude Include="Utilities\Movements\Movement.h" />
-    <ClInclude Include="Demos\TileMapDemo.h" />
+    <ClInclude Include="Utilities\LevelEditor\LevelEditor.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Program.cpp" />
@@ -46,7 +46,7 @@
     <ClCompile Include="Utilities\Movements\ThrowableMovement.cpp" />
     <ClCompile Include="Utilities\Gun\Gun.cpp" />
     <ClCompile Include="Utilities\Movements\Movement.cpp" />
-    <ClCompile Include="Demos\TileMapDemo.cpp" />
+    <ClCompile Include="Utilities\LevelEditor\LevelEditor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Framework.lib" />
