--- a/Framework/Framework.vcxproj
+++ b/Framework/Framework.vcxproj
@@ -159,6 +159,9 @@
     <ClCompile Include="Game\Level\Level.cpp" />
     <ClCompile Include="Game\Level\Room\Room.cpp" />
     <ClCompile Include="Game\UI\ProgressBar.cpp" />
+    <ClCompile Include="Geometries\Tile\Tile.cpp" />
+    <ClCompile Include="Geometries\Tile\TileMap.cpp" />
+    <ClCompile Include="Geometries\Tile\TileSet.cpp" />
     <ClCompile Include="Objects\GameObject.cpp" />
     <ClCompile Include="Objects\Terrain.cpp" />
     <ClCompile Include="Utilities\Collision\Collision.cpp" />
@@ -198,6 +201,9 @@
     <ClInclude Include="Game\Level\Level.h" />
     <ClInclude Include="Game\Level\Room\Room.h" />
     <ClInclude Include="Game\UI\ProgressBar.h" />
+    <ClInclude Include="Geometries\Tile\Tile.h" />
+    <ClInclude Include="Geometries\Tile\TileMap.h" />
+    <ClInclude Include="Geometries\Tile\TileSet.h" />
     <ClInclude Include="Objects\GameObject.h" />
     <ClInclude Include="Objects\Terrain.h" />
     <ClInclude Include="Utilities\Collision\Collision.h" />
