Room 연결시켜서 생성 / 무브먼트에서 자신이 위치한 방과 양옆 지형 받아와서 충돌검사하도록 변경

--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -154,6 +154,7 @@
     <ClInclude Include="Character\Animations.h" />
     <ClInclude Include="Character\Character.h" />
     <ClInclude Include="Character\Agent.h" />
+    <ClInclude Include="Utilities\GameManager.h" />
     <ClInclude Include="Utilities\Gun\Gun.h" />
     <ClInclude Include="Utilities\Input\Input.h" />
     <ClInclude Include="Utilities\Combat\PlayerCombat.h" />
@@ -179,6 +180,7 @@
     <ClCompile Include="Character\Animations.cpp" />
     <ClCompile Include="Character\Character.cpp" />
     <ClCompile Include="Character\Agent.cpp" />
+    <ClCompile Include="Utilities\GameManager.cpp" />
     <ClCompile Include="Utilities\Gun\Gun.cpp" />
     <ClCompile Include="Utilities\Input\Input.cpp" />
     <ClCompile Include="Utilities\Combat\PlayerCombat.cpp" />
