--- a/UnitTest/imgui.ini
+++ b/UnitTest/imgui.ini
@@ -129,6 +129,11 @@ Pos=60,60
 Size=113,46
 Collapsed=0
 
+[Window][GameManager]
+Pos=19,19
+Size=244,53
+Collapsed=0
+
 [Docking][Data]
 DockNode      ID=0x00000001 Pos=1012,361 Size=252,311 Split=Y
   DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=252,231 Split=Y
