--- a/UnitTest/UnitTest.vcxproj.filters
+++ b/UnitTest/UnitTest.vcxproj.filters
@@ -24,6 +24,7 @@
     <ClInclude Include="Utilities\Gun\Gun.h" />
     <ClInclude Include="Utilities\Movements\Movement.h" />
     <ClInclude Include="Utilities\LevelEditor\LevelEditor.h" />
+    <ClInclude Include="Utilities\GameManager.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Program.cpp" />
@@ -47,6 +48,7 @@
     <ClCompile Include="Utilities\Gun\Gun.cpp" />
     <ClCompile Include="Utilities\Movements\Movement.cpp" />
     <ClCompile Include="Utilities\LevelEditor\LevelEditor.cpp" />
+    <ClCompile Include="Utilities\GameManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="Framework.lib" />
